--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,17 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "0.12"
-group= "com.crowley.exnihilo2" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+ext.configFile = file "build.config"
+
+configFile.withReader {
+    // Load config.  It shall from now be referenced as simply config or project.config
+    def prop = new Properties()
+    prop.load(it)
+    project.ext.config = new ConfigSlurper().parse prop
+}
+
+version = "${config.mod_version}"
+group= "exnihilo2"
 archivesBaseName = "ExNihilo2"
 
 minecraft {
@@ -31,6 +40,9 @@ minecraft {
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20141130"
+    
+    replaceIn "EN2.java"
+    replace "@EN2_VERSION@", project.version
 }
 
 dependencies {
