--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,19 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
     }
 }
 
-apply plugin: 'forge'
+apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'maven'
+apply plugin: 'eclipse'
 
 ext.configFile = file "build.config"
 
@@ -31,7 +29,7 @@ group= "exnihilo2"
 archivesBaseName = "ExNihilo2"
 
 minecraft {
-    version = "1.8-11.14.3.1487"
+    version = "1.8.9-11.15.1.1722"
     runDir = "eclipse"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -39,7 +37,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20150602"
+    mappings = 'snapshot_20160126'
     
     replaceIn "EN2.java"
     replace "@EN2_VERSION@", project.version
